# Assingment_Index_Binary_Tree

./: .gitignore  CMakeLists.txt  README.md  makefile
headers/: CHRTimer.h  FileNameNode.h  IndexLinkedList.h  MainFunctions.h  MenuPrinter.h  Timer.h  WordTypeNode.h
src/: Main.cpp  MainFunctions.cpp
